--- a/package.json
+++ b/package.json
@@ -1,44 +1,70 @@
 {
-  "name": "electron-vite-react",
-  "version": "2.2.0",
-  "main": "dist-electron/main/index.js",
-  "description": "Electron Vite React boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "name": "gestionfactures",
+  "version": "1.0.0",
+  "main": "src/main/main.js",
+  "description": "Application de gestion de factures desktop",
+  "author": "GestionFactures",
   "license": "MIT",
   "private": true,
-  "debug": {
-    "env": {
-      "VITE_DEV_SERVER_URL": "http://127.0.0.1:7777/"
-    }
-  },
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build && electron-builder",
+    "dev": "NODE_ENV=development concurrently \"vite\" \"electron .\"",
+    "build": "vite build && electron-builder",
     "preview": "vite preview",
-    "pretest": "vite build --mode=test",
-    "test": "vitest run"
+    "electron": "electron .",
+    "electron-dev": "NODE_ENV=development electron .",
+    "postinstall": "electron-rebuild",
+    "dist": "electron-builder"
   },
   "dependencies": {
-    "electron-updater": "^6.3.9"
+    "@electron/remote": "^2.1.3",
+    "better-sqlite3": "^12.6.2",
+    "date-fns": "^4.1.0",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
+    "lucide-react": "^0.570.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.48.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
-    "electron": "^33.2.0",
-    "electron-builder": "^24.13.3",
+    "concurrently": "^8.2.2",
+    "electron": "^40.4.1",
+    "electron-builder": "^26.7.0",
+    "electron-rebuild": "^3.2.9",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.4.2",
-    "vite": "^5.4.11",
-    "vite-plugin-electron": "^0.29.0",
-    "vite-plugin-electron-renderer": "^0.14.6",
-    "vitest": "^2.1.5"
+    "vite": "^7.3.1"
+  },
+  "build": {
+    "appId": "com.gestionfactures.app",
+    "productName": "gmFactures",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "src/main/**/*",
+      "dist/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "mac": {
+      "target": "dmg",
+      "category": "public.app-category.business"
+    },
+    "win": {
+      "target": ["nsis", "portable"]
+    },
+    "linux": {
+    "category": "Office",
+    "target": ["AppImage", "deb"],
+    "maintainer": "Votre Nom <votre@email.com>"
+  }
   }
 }
