--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,7 @@ jobs:
       - name: Build & Release Electron App
         uses: samuelmeuli/action-electron-builder@v1
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          release: true # Crée automatiquement une "Release" sur GitHub
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          # On ajoute explicitement la variable d'environnement ici
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
