Ajout de la permission write au fichier build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,6 @@
+permissions:
+  contents: write  # Indispensable pour créer des releases et uploader des fichiers
+  
 name: Build Electron App - gmFactures
 on:
   push:
