--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.24",
     "concurrently": "^9.2.1",
     "electron": "^40.4.1",
-    "electron-builder": "^26.7.0",
+    "electron-builder": "^26.8.1",
     "electron-rebuild": "^3.2.9",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.6",
     "postcss-import": "^16.1.0",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^4.2.0",
     "vite": "^7.3.1"
   },
   "build": {
@@ -59,11 +59,17 @@
       "category": "public.app-category.business"
     },
     "win": {
-      "target": ["nsis", "portable"]
+      "target": [
+        "nsis",
+        "portable"
+      ]
     },
     "linux": {
       "category": "Office",
-      "target": ["AppImage", "deb"],
+      "target": [
+        "AppImage",
+        "deb"
+      ],
       "maintainer": "Votre Nom <votre@email.com>"
     }
   },
