--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.2.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.3.3",
