--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development concurrently \"vite\" \"electron .\"",
-    "build": "vite build && electron-builder",
-    "preview": "vite preview",
-    "electron": "electron .",
-    "electron-dev": "NODE_ENV=development electron .",
-    "postinstall": "electron-rebuild",
-    "dist": "electron-builder"
-  },
+  "dev": "NODE_ENV=development concurrently \"vite\" \"electron .\"",
+  "build": "vite build",
+  "build:electron": "vite build && electron-builder",
+  "preview": "vite preview",
+  "electron": "electron .",
+  "electron-dev": "NODE_ENV=development electron .",
+  "postinstall": "electron-rebuild",
+  "dist": "electron-builder"
+},
   "dependencies": {
     "@electron/remote": "^2.1.3",
     "better-sqlite3": "^12.6.2",
